--- a/style.css
+++ b/style.css
@@ -1,69 +1,77 @@
-
-.navbar-nav .nav-link:hover {
-    color: green;
-    animation: blink 0.5s infinite alternate;
-}
-
-.about-section {
-    padding: 140px 0; 
-    background-color: #f8f9fa; 
-    margin-top: 1px;
-    background-image:url("bck6.png") ;
+.navbar-custom {
+    background-color: #1b76d6;}
+  .navbar-brand img {
+    max-height: 40px;
   }
-  .about-image img{
-    height: 50%;
-    width: 50%;
+  .navbar-custom {
+    background-color: #007bff; 
   }
-  .navbar-brand img{
+  .navbar-brand img {
+    max-height: 40px; 
+  
+  }
+  .img-fluid img{
     height: 50px;
     width: 50px;
   }
-  .about-details {
-    padding-right: 15px; 
+  
+  .about-section {
+    padding: 60px 0;
+    background-image: url('images/bck6.png');
+    background-size: cover;
+    background-position: center;
+    
   }
-  .about-image img {
+  .about-img {
     max-width: 100%;
-    height: auto;
+    border-radius: 5px;
   }
-  .navbar {
-    padding-top: 20px; 
-    margin-bottom: 1px; 
-  }
-  .services-section {
-    padding: 80px 0; 
+  .skills-section {
+    padding: 60px 0;
+    background-color: #f8f9fa; 
     text-align: center;
-    color: blue;
-    background-image: url("bck4.png"); 
+    background-image: url('images/bck8.png'); 
   }
-  .service-card {
-    margin-bottom: 30px;
-    border: none; 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
+ 
+  .skills-images {
+    padding-top: 60px;
+    margin-top: 40px; 
   }
-  .card-body {
-    padding: 30px; 
-  }
-  .card-title {
-    font-size: 1.5rem; 
-    margin-bottom: 15px; }
-  .card-text {
-    font-size: 1.1rem; 
-    padding: 80px;
-  }
-  .technologies-section {
-    padding: 80px 0 80px 0; 
-    text-align: center; 
-    color: blue;
-    background-image: url("bck7.png");
-  }
-  .technology-card {
-    height: 100%; 
-    border: none; 
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); 
-  }
-  .technology-card img {
+  .skills-images img {
     max-width: 100%;
-    height: 100%;
+    border-radius: 5px;
+    margin-bottom: 20px; 
+  }
+  .projects-section {
+    padding: 60px 0;
+    background-color: #f0f0f0; 
+    
+  }
+  .project-item {
+    margin-bottom: 30px; 
+  }
+  .project-video {
+    max-width: 100%;
+    border-radius: 5px;
+  } .carousel-item {
+    width: 50%;
+    float: left; 
+    position: relative;
+  }
+  .carousel-inner {
+    width: 200%; 
+    overflow: hidden;
+    position: relative; 
+    transition: left 0.6s ease;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: auto;
+  }
+  .contact-section {
+    padding: 60px 0;
+    background-color: #e9ecef; 
+    text-align: center; 
   }
   .contact-section {
     padding: 80px 0;
